fix linter errors in ForgeHack.java